collect button still visible but cursed (issue #58)

--- a/src/footer/footer.css
+++ b/src/footer/footer.css
@@ -27,6 +27,12 @@
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 3px 5px 2px 0px rgba(0, 0, 0, 0.33),
     0px 3px 1px -2px rgba(65, 65, 65, 0.12);
 }
+.actions button:disabled {
+  color: #5a5959;
+  background-color: #9e9e9e;
+  border-color: #5a5959;
+}
+
 .roll-action,
 .collect-action,
 .next-round-action {
@@ -40,4 +46,23 @@
 }
 .collect-action .score {
   font-size: 12px;
+}
+.collect-action .skull-symbol {
+  width: 32%;
+  position: relative;
+  top: -70%;
+  left: 75%;
+  display: block;
+  transform: rotate(15deg);
+  animation: stamp 0.4s cubic-bezier(0.4, 0, 1, 1) forwards;
+}
+
+@keyframes stamp {
+  from {
+    opacity: 0;
+    transform: rotate(0deg) scale(3);
+  }
+  to {
+    transform: rotate(15deg) scale(1);
+  }
 }
